--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         </div>
         <div class="other-calculators">
             <div class="cal-1">
-            <a accesskey="tabindex 1" href="cal1.html" target="blank">calculator-1</a>
+            <a accesskey="tabindex 1" href="https://oriz-p.github.io/Calculator-1/" target="blank">calculator-1</a>
             </div>
             <div class="cal-2">
-            <a accesskey="tabindex 2" href="cal-2.html" target="blank" >calculator-2</a>
+            <a accesskey="tabindex 2" href="https://oriz-p.github.io/Calculator-2/" target="blank" >calculator-2</a>
             </div>
             <div class="cal-3">
-            <a accesskey="tabindex 3" href="cal-3.html" target="blank">calculator-3</a>
+            <a accesskey="tabindex 3" href="https://oriz-p.github.io/Calculator-3/" target="blank">calculator-3</a>
             </div>
         </div>
 </body>
